# fusill

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  docker-compose.yml
contracts/: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  package.json
contracts/src/: lib.rs
contracts/tests/: cancel_job.ts  claim_job.ts  consensus.ts  create_job.ts  force_advance.ts  helpers.ts  initialize.ts  lifecycle.ts  register_node.ts  reveal_result.ts  submit_commitment.ts  withdraw_stake.ts
docs/: DEPLOY.md  consensus-trustless.md  ddos-attack-types.md  job-lifecycle.md  multi-vector-campaigns.md  ownership-verification.md  parameters.md  protocol-reference.md  staking-and-reputation.md  threat-model.md
node-client/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
node-client/src/: baseline.js  chain.js  commitment.js  index.js  mock-target.js  runner.js  verify.js
node-client/src/runners/: dns-flood.js  http-flood.js  http2-continuation.js  http2-rapid-reset.js  rudy.js  slowloris.js  syn-flood.js  syn_flood.c  tls-exhaustion.js  udp-flood.js  websocket-exhaustion.js
node-client/tests/: consensus.test.js  e2e.test.js
node-client/tests/runners/: dns-flood.test.js  http-flood.test.js  http2-continuation.test.js  http2-rapid-reset.test.js  (+6 more)
scripts/: deploy.sh  generate-wallets.sh  initialize.js
sdk/: Dockerfile  README.md  cancel-expired.js  package-lock.json  package.json
sdk/src/: FusillClient.js  demo.js  index.js
sdk/tests/: FusillClient.test.js  finalizeSecurity.test.js  multiVector.test.js
shared/: fusill-idl.json
