[package]
name = "fusill"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fusill"

[features]
no-entrypoint = []
no-idl = []
no-log-filter = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "1.0.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("anchor-debug", "no-log-ix-name", "custom-heap", "custom-panic"))',
    'cfg(target_os, values("solana"))',
] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
